# langgraph_imposter

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
content-factory/factory/: __init__.py  calibrate.py  graph.py  packs.py  propose.py  run.py  store.py  verifiers.py
content-factory/tests/: test_factory.py  test_import.py
docs/adr/: 001-fail-closed-audit.md  002-byok-key-handling.md
evals/: README.md  probes.py
evals/clue_leak/: test_clue_leak.py
evals/pack_quality/: test_pack_quality.py
server/: alembic.ini  audit.py  cost.py  db.py  embeddings.py  engine.py  graph.py  llm.py  main.py  models.py  protocol.py  reports.py  rhyme.py  rooms.py  rules.py  state.py  telemetry.py  validators.py  words.py  ws.py
server/ai/: __init__.py  clue_agent.py  runtime.py  suspicion.py
server/alembic/: env.py
server/alembic/versions/: 0001_rooms_players.py  0002_telemetry.py  0003_pack_entries.py
server/prompts/: __init__.py
server/tests/: helpers.py  test_ai_engine.py  test_api.py  test_audit.py  test_clue_agent.py  test_cost.py  test_graph.py  test_health.py  test_protocol.py  test_reports.py  test_rules.py  test_suspicion.py  test_validators.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: Countdown.tsx  Game.tsx  RoleCard.tsx
web/app/room/[code]/: page.tsx
web/lib/: api.ts  phaseAccent.ts  protocol.ts  useGame.ts
